...
                android:layout_weight="1"
                android:background="#CD000000"
                android:backgroundTint="#D1D1D1"
                android:translationY="100dp"></SearchView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/roomRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:translationY="150dp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/packageRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:translationY="150dp"
                android:visibility="visible">

            </androidx.recyclerview.widget.RecyclerView>
...
